--- a/styles.css
+++ b/styles.css
@@ -292,6 +292,32 @@ h2 {
   }
 }
 
+/*  Modal Styles  */
+
+#task-modal {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  max-width: 500px;
+  margin: auto;
+  margin-top: -2px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  padding-left: 20p;
+  padding-right: 20px;
+  gap: 10px;
+  border: none;
+  border-radius: 8px;
+  box-shadow: var(--primary-box-shadow);
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
 /******** Mobile ********/
 @media screen and (max-width: 576px) {
   .card-column-main {
