--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,34 @@ header {
   font-weight: bold;
 }
 
+#task-modal {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  max-width: 500px;
+  margin: auto;
+  margin-top: -10x;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  padding-left: 20p;
+  padding-right: 20px;
+  gap: 10px;
+  border: none;
+  border-radius: 8px;
+  box-shadow:10px 10px 5px 0px rgba(0, 0, 0, 0.5);
+
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 /* ===============
    Headings
 ================ */
@@ -300,7 +328,7 @@ h2 {
   width: 90%;
   max-width: 500px;
   margin: auto;
-  margin-top: -2px;
+  margin-top: -10x;
   padding-bottom: 20px;
   padding-top: 20px;
   padding-left: 20p;
