--- a/styles.css
+++ b/styles.css
@@ -230,7 +230,7 @@ dialog {
   border: none;
   border-radius: 12px;
   background: white;
-  padding: 1.5rem;
+  padding: 24px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
   z-index: 1000;
 }
@@ -349,6 +349,7 @@ h2 {
   max-width: 500px;
   margin: auto;
   margin-top: -10x;
+  margin-left: -10px;
   padding-bottom: 20px;
   padding-top: 20px;
   padding-left: 20p;
@@ -371,6 +372,15 @@ label{
   margin-bottom: 8px;
   color: #828FA3;
   margin-bottom: 2px;
+}
+
+input, select, textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #E4EBFA;
+  border-radius: 4px;
+  font-size: 13px;
+  font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
 /******** Mobile ********/
