--- a/styles.css
+++ b/styles.css
@@ -351,7 +351,7 @@ h2 {
   margin-top: -10x;
   margin-left: -10px;
   padding-bottom: 20px;
-  padding-top: 20px;
+  padding-top: 5px;
   padding-left: 20p;
   padding-right: 20px;
   gap: 10px;
@@ -381,6 +381,12 @@ input, select, textarea {
   border-radius: 4px;
   font-size: 13px;
   font-family: 'Plus Jakarta Sans', sans-serif;
+}
+
+#close-modal-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
 /******** Mobile ********/
