--- a/styles.css
+++ b/styles.css
@@ -390,6 +390,12 @@ input, select, textarea {
   outline: none;
 }
 
+option {
+  font-size: 13px;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  color: #828FA3;
+  border-radius: 20px
+}
 
 /******** Mobile ********/
 @media screen and (max-width: 576px) {
@@ -402,5 +408,9 @@ input, select, textarea {
 
   .column-div {
     padding: 24px;
+  }
+
+  #task-modal {
+    padding-top: 10px;
   }
 }
